# PhilAi

./: .env.example  .gitignore  README.md  TECHNICAL.md  main.py  pyproject.toml  scrape.py
maps/: map_bilinçin_metafiziği.html  map_bilinçin_metafiziği.json  map_bilinçin_metafiziği.md  map_kötülük_problemi.html  map_kötülük_problemi.json  map_kötülük_problemi.md  map_özgür_i̇rade_var_mıdır.json  map_özgür_i̇rade_var_mıdır.md
rag/: agents.py  chat.py  config.py  doctor.py  eval.py  indexer.py  mapper.py  retriever.py  stats.py
